photos overflow fix

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -146,7 +146,7 @@ body {
 
 @-webkit-keyframes imgView {
     from {}
-    to{max-width: 90%}
+    to{max-width: 90%;}
 }
 
 .about:hover {
